<!--
  ~ Create by Sudono Tanjung
  ~ Copyright (c) 2017. All rights reserved.
  ~
  ~ Last Modified by User on 12/14/17 6:51 PM
  -->

<resources>
    <string name="app_name">iCare</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>

    <string name="language_settings">Language</string>
    <string name="language_description_settings">Currently not all language supported</string>
    <string name="language_dialog_title_settings">Select Language</string>

    <string name="name_settings">Full Name</string>
    <string name="name_description_settings">Please provided your full name</string>

    <!-- Global Settings -->
    <string name="settings_default_fullname">Jane Doe</string>
    <string name="settings_lang">English</string>
    <string name="settings_lang_loc"></string>


    <string name="action_refresh">Settings</string>
    <string name="action_new">Settings</string>
    <string name="logo_desc">App logo</string>
    <string name="country_name">Nigeria</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="health_title">Default Health Monitoring</string>
    <string name="health_comment">Comment</string>

    <string name="sensor_save">Save</string>
    <string name="choose_health_data_list_date">Choose Date for Graph</string>
    <string name="health_data_list_title">Health Data List</string>
    <string name="sensor_data_list_title">Sensor List</string>
    <string name="login_with">Login</string>
    <string name="sensor_edit_delete">Delete</string>
    <string name="sort_by_year">Show by year</string>
    <string name="sort_by_month">Show by month</string>
    <string name="sort_by_day">Show by day</string>
    <string name="health_data_analyst">Analysis</string>
    <string name="health_data_choose_date">Choose Health Data Date</string>
    <string name="active_health_data_list_menu">Currently Active Sensor</string>
    <string name="current_active_sensor_activity_title">Currently Active Sensor</string>
    <string name="analyst_default_text">No Analysis Available</string>
    <string name="report_error_menu_title">Report Bugs</string>
    <string name="comment_send_button">Send Comment</string>
    <string name="no_comment_list">No Comment added today!</string>
    <string name="health_data_summary_loading">Please wait! this could take a moment depending on the data.</string>
    <string name="comment_hint">Write about today condition here!</string>
    <string name="error_health_list_data">Sorry, cannot load the summary right now, please try again later!</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>
